--- a/css.css
+++ b/css.css
@@ -101,7 +101,8 @@ nav {
 .logo a h1 {
     font-size: 1.5rem;
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif
 }
 .nav-links {
 	display: flex;
@@ -201,6 +202,7 @@ nav {
     position: relative;
     margin-left: 20px;
 }
+
 /* Main content-1 
 #################################################################################
 */
@@ -327,7 +329,7 @@ nav {
     line-height: 12px;
 }
 .right {
-    width: 35%;
+    width: 30%;
     max-width: 360px;
     min-width: 220px;
 }
@@ -369,6 +371,7 @@ nav {
 .certificates-box {
     width: 100%;
     float: left;
+    position: relative;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
@@ -376,6 +379,7 @@ nav {
     text-overflow: ellipsis;
     height: 510px;
 }
+
 #showElements{
     margin: 0 auto;
     margin-top: 20px;
@@ -416,13 +420,13 @@ nav {
     height: 240px;
     float: left;
     border-radius: 5px;
-    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
     opacity: 1;
     margin: 7px;
     box-shadow: rgba(2,12,27,0.7) 0 10px 20px -10px;
     position: relative;
     z-index: 5;
     overflow: hidden;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
     -webkit-transition: all cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.3s;
 }
 .box:after{
@@ -462,7 +466,7 @@ nav {
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.8s;
 }
 .box:hover{
-    transform: translateY(-8px);
+    transform: translateY(-4px);
     border-radius: 5px;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
@@ -474,12 +478,12 @@ nav {
     background-position: center;
 }
 .box:nth-child(2) {
-    background: url(./img/python.png);
+    background: url(./img/python.jpg);
     background-size: cover;
     background-position: center;
 }
 .box:nth-child(3){
-    background: url(./img/Java.png);
+    background: url(./img/Java.jpg);
     background-size: cover;
     background-position: center;
 }
