--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media (min-width: 769px) and (max-width: 900px){
+/* @media (min-width: 769px) and (max-width: 900px){
     .master-project-box{
         max-width: 300px;
     }
@@ -6,225 +6,228 @@
         width: 85%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
         text-overflow: ellipsis;
     }
-}
+} */
 
-@media screen and (max-width: 768px) {
-	.nav-links{
-        position: absolute;
-        height: 280px;
-        top: 55.5px;
-        border-radius: 4px;
-        right: 0;
-		background-color: #1d1b38; 		/*#1d1b38*/
-		display: flex;
-		flex-direction: column;
-        align-items: flex-start;
-        flex-wrap: nowrap;
-		width: 240px;
-        z-index: 1;
-        transform: translateX(100%);
-        transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
-    }
-    nav {
-        width: 100%;
-    }
-    .links {
-        padding: 10px;
-        display: flex;
-        align-items: baseline;
-        border-bottom: #2d286e;
-    }
-    .resume-btn{
-        padding: 10px;
-    }
-	.links li {
-        opacity: 0;       
-    }
-	.burger {
-        display: block;
-        z-index: 2;
-        margin: 0;
-    }
-    .column-2{
-        width: 100%;
-        flex-direction: column;
-    }
-    .about-content {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-    }
-    .about-content .left{
-        width: 100%;
-    }
-    .about-content .right{
-        width: 50%;
-        margin-top: 20px;
-    }
-    .certificates-box {
-        width: 85%;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-    .box{
-        margin-left: 70px;
-    }
-    .project-container{
-        width: 100%;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        /* flex-wrap: wrap; */
-        align-items: center;
-    }
+@media (min-width: 601px) and (max-width: 815px) {
+  .nav-links {
+    position: absolute;
+    height: 280px;
+    top: 55.5px;
+    border-radius: 4px;
+    right: 0;
+    background-color: #1d1b38; /*#1d1b38*/
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    width: 240px;
+    z-index: 1;
+    transform: translateX(100%);
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+  }
+  nav {
+    width: 100%;
+  }
+  .links {
+    padding: 10px;
+    display: flex;
+    align-items: baseline;
+    border-bottom: #2d286e;
+  }
+  .resume-btn {
+    padding: 10px;
+  }
+  .links li {
+    opacity: 0;
+  }
+  .burger {
+    display: block;
+    z-index: 2;
+    margin: 0;
+  }
+  .column-2 {
+    width: 100%;
+    flex-direction: column;
+  }
+  .about-content {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .about-content .left {
+    width: 100%;
+  }
+  .about-content .right {
+    width: 50%;
+    margin-top: 20px;
+  }
+  .certificates-box {
+    width: 345px;
+    margin: 0 auto;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .project-container {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
-@media screen and (max-width: 1012px) {
-    .certificates-box {
-        width: 85%;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        display: -webkit-box;
+@media (min-width: 816px) and (max-width: 1012px) {
+  .certificates-box {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    }
-    .project-container{
-        width: 100%;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        /* flex-wrap: wrap; */
-        align-items: center;
-    }
-    .box{
-        margin-left: 30px;
-    }   
+  }
+  .project-container {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* flex-wrap: wrap; */
+    align-items: center;
+  }
 }
 @media screen and (max-width: 600px) {
-	.nav-links{
-        position: absolute;
-        height: 280px;
-        top: 55.5px;
-        border-radius: 4px;
-        right: 0;
-		background-color: #1d1b38; 		/*#1d1b38*/
-		display: flex;
-		flex-direction: column;
-        align-items: flex-start;
-        flex-wrap: nowrap;
-		width: 240px;
-        z-index: 1;
-        transform: translateX(100%);
-        transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
-    }
-    .links {
-        padding: 10px;
-        display: flex;
-        align-items: baseline;
-        border-bottom: #2d286e;
-    }
-    .resume-btn{
-        padding: 10px;
-        display: block;
-    }
-	.burger {
-        display: block;
-        z-index: 2;
-        margin: 0;
-    }
-    /* ############################################################## */
-    .content {
-        width: 90%;
-        margin: 0 auto;
-    }
-	.column-1 {
-        width: 100%;
-   		/* transform: translate(-40vw, -10vw);*/
-    }
-    .column-1 h1 {
-        font-size: 3em;
-        line-height: 1em;
-    }
-    .column-1 h5 {
-        font-size: .8em;
-        
-    }
-    .column-1 h2 {
-        font-size: 2.5em;
-        line-height: 1em;
-    }
-    .column-1 p {
-        font-size: 1em;
-        width: 100%;
-    }
-    .get-in-touch {
-        font-size: 14px;
-        padding: 15px 25px;
-    }
-    
-    /* ################################################################## */
+  .nav-links {
+    position: absolute;
+    height: 280px;
+    top: 55.5px;
+    border-radius: 4px;
+    right: 0;
+    background-color: #1d1b38; /*#1d1b38*/
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    width: 240px;
+    z-index: 1;
+    transform: translateX(100%);
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+  }
+  .links {
+    padding: 10px;
+    display: flex;
+    align-items: baseline;
+    border-bottom: #2d286e;
+  }
+  .resume-btn {
+    padding: 10px;
+    display: block;
+  }
+  .burger {
+    display: block;
+    z-index: 2;
+    margin: 0;
+  }
+  .about-content {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .about-content .left {
+    width: 100%;
+  }
+  .about-content .right {
+    width: 50%;
+    margin-top: 20px;
+  }
+  /* ############################################################## */
+  .content {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .column-1 {
+    width: 100%;
+    /* transform: translate(-40vw, -10vw);*/
+  }
+  .column-1 h1 {
+    font-size: 3em;
+    line-height: 1em;
+  }
+  .column-1 h5 {
+    font-size: 0.8em;
+  }
+  .column-1 h2 {
+    font-size: 2.5em;
+    line-height: 1em;
+  }
+  .column-1 p {
+    font-size: 1em;
+    width: 100%;
+  }
+  .get-in-touch {
+    font-size: 14px;
+    padding: 15px 25px;
+  }
 
-    .column-2{
-        width: 100%;
-        flex-direction: column;
-    }
+  /* ################################################################## */
 
-    /* ###################################################################### */
-    
-    .column-3 {
-        width: 100%;
-        animation: 0.4s ease-in;
-    }
-    .certificates-box {
-        width: 100%;
-        margin: 0 auto;
-        text-overflow: ellipsis;
-    }
-    .box {
-        width: 100%;
-        min-width: 320px;
-        max-width: 340px;
-        background-color: rgba(10, 25, 47,0.2);
-    }
-    .contact-grid ul {
-        row-gap: 30px;
-        margin: 0 auto;
-    }
-    .left-line,
-    .right-line {
-        display: none;
-    }
+  .column-2 {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  /* ###################################################################### */
+
+  .column-3 {
+    width: 100%;
+    animation: 0.4s ease-in;
+  }
+  .certificates-box {
+    width: 354px;
+    margin: 0 auto;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .box {
+    width: 100%;
+    min-width: 320px;
+    max-width: 340px;
+    background-color: rgba(10, 25, 47, 0.2);
+  }
+  .contact-grid ul {
+    row-gap: 30px;
+    margin: 0 auto;
+  }
+  .left-line,
+  .right-line {
+    display: none;
+  }
 }
 .nav-active {
-    transform: translateX(0%);
-    opacity: 1;
+  transform: translateX(0%);
+  opacity: 1;
 }
 
-@keyframes navLinkFade{
-	from {
-		opacity: 0;
-		transform: translateX(50px);
-	}
-	to {
-		opacity: 1;
-		transform: translateX(0px);
-	}
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
