--- a/css.css
+++ b/css.css
@@ -343,7 +343,7 @@ nav {
   line-height: 12px;
 }
 .right {
-  width: 30%;
+  width: 33%;
   max-width: 360px;
   min-width: 220px;
 }
@@ -562,17 +562,16 @@ nav {
 .contact-grid ul {
   list-style-type: none;
   font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   display: grid;
   row-gap: 15px;
   margin: 0 auto;
   padding: 2px;
 }
-.contact-icons i {
-  font-size: 18px;
-  color: transparent;
-  -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: rgb(204, 214, 246);
+.contact-icons img {
+  width: 22px;
+  height: 22px;
+  filter: invert(100%);
 }
 
 /* ############################################################################# */
